fixed elements jumping out of place

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/* Font */
+
+@font-face {
+  font-family: "feronia";
+  src: url("../Font/Feronia.woff");
+}
+
 /* Base Styles */
 * {
   box-sizing: border-box;
@@ -110,11 +117,11 @@ li {
   padding: 10px;
 }
 
-/* First Main Content */
+/*Main Content */
 
 .first-content {
   background-color: whitesmoke;
-  padding: 30px 20px;
+  padding: 40px 20px;
 }
 
 .second-content {
@@ -131,6 +138,7 @@ li {
   margin: 0 auto;
   max-width: 100%;
   max-height: 100%;
+  filter: drop-shadow(20px 10px 4px #c0c0c0);
 }
 
 .resize {
@@ -223,7 +231,6 @@ table {
   }
 
   .intro {
-    display: block;
     text-align: left;
     margin-left: 40px;
     padding-right: 10px;
@@ -233,19 +240,18 @@ table {
   }
 
   .section {
-    display: block;
-    float: left;
-    margin-left: 20px;
+    display: inline-block;
+    margin-left: 23px;
+    padding: 0;
     width: 45%;
-    height: 40%;
+    height: 45%;
   }
 
   .section-skills {
-    display: block;
     float: left;
-    margin-left: 20px;
-    width: 45%;
-    height: 40%;
+    margin-left: 23px;
+    width: 43%;
+    height: 43%;
   }
 
   .contact-me {
@@ -411,10 +417,4 @@ table {
   content: "";
   display: table;
   clear: both;
-}
-/* Font */
-
-@font-face {
-  font-family: "feronia";
-  src: url("../Font/Feronia.woff");
 }
